# manim-mpv-presentation

./: .gitignore  .pre-commit-config.yaml  README.md  mpv_pres.py  pylintrc.cfg  pyproject.toml
.github/workflows/: pre-commit.yml
example/: example.py
